# dissertacao_antonino

./: Arvores.cpp  Arvores.h  CMakeLists.txt  Funcoes.cpp  Funcoes.h  ManipulaArquivo.cpp  ManipulaArquivo.h  MascaraImagem.cpp  MascaraImagem.h  MedidasDiversidadeFuncional.cpp  MedidasDiversidadeFuncional.h  Particula.cpp  Particula.h  PathSystem.cpp  PathSystem.h  README.md  ReducaoFalsoPositivo.cpp  ReducaoFalsoPositivo.h  RemocaoFalsoPositivo.cpp  RemocaoFalsoPositivo.h  ResizeImage.cpp  ResizeImage.h  Util.cpp  Util.h  header.h  includes.h  main.cpp  main2.cpp  main3.cpp  quantizacao.cpp  quantizacao.h
